feat: replace flux impossible with flux journalier
