# doc/api.yml
@@ -203,19 +203,19 @@ paths:
           $ref: '#/components/responses/429'
         '500':
           $ref: '#/components/responses/500'
-  /patrimoines/{nom_patrimoine}/flux-impossibles:
+  /patrimoines/{nom_patrimoine}/flux-journaliers:
     get:
       tags:
         - projection_future
-      operationId: getPatrimoineFluxImpossibles
-      summary: obtenir une liste des flux impossibles du patrimoine dans une intervalle donnée
+      operationId: getPatrimoineFluxJournalier
+      summary: obtenir une liste des flux journaliers du patrimoine dans une intervalle donnée
       parameters:
         - $ref: "#/components/parameters/nom_patrimoine"
         - $ref: "#/components/parameters/debut"
         - $ref: "#/components/parameters/fin"
       responses:
         '200':
-          description: flux impossibles du patrimoine actuel selon une plage de date donnée
+          description: flux journaliers du patrimoine actuel selon une plage de date donnée
           content:
             'application/json':
               schema:
@@ -224,7 +224,7 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: "#/components/schemas/FluxImpossibles"
+                      $ref: "#/components/schemas/FluxJournalier"
         '400':
           $ref: '#/components/responses/400'
         '404':
@@ -428,16 +428,14 @@ components:
         - properties:
             transfertCommeGroupe:
               $ref: "#/components/schemas/GroupePossession"
-    FluxImpossibles:
+    FluxJournalier:
       type: object
       properties:
-        nom_argent:
-          type: string
         date:
           type: string
           format: date
-        valeur_argent:
-          type: integer
+        argent:
+          $ref: "#/components/schemas/Argent"
         flux_argents:
           type: array
           items:
