# src/main/java/com/harena/api/service/ProjectionFutureService.java
@@ -1,27 +1,28 @@
 package com.harena.api.service;
 
 import com.harena.api.utils.StringNormalizer;
-import java.io.File;
-import java.time.LocalDate;
-import java.util.Set;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import school.hei.patrimoine.modele.EvolutionPatrimoine;
-import school.hei.patrimoine.modele.FluxImpossibles;
+import school.hei.patrimoine.modele.FluxJournalier;
 import school.hei.patrimoine.modele.Patrimoine;
 import school.hei.patrimoine.visualisation.xchart.GrapheurEvolutionPatrimoine;
+
+import java.io.File;
+import java.time.LocalDate;
+import java.util.Set;
 
 @Service
 @RequiredArgsConstructor
 public class ProjectionFutureService {
   private final PatrimoineService patrimoineService;
 
-  public Set<FluxImpossibles> getFluxImpossibles(
+  public Set<FluxJournalier> getFluxJournaliers(
       String patrimoineName, LocalDate startDate, LocalDate endDate) {
     EvolutionPatrimoine evolutionPatrimoine =
         getEvolutionPatrimoine(patrimoineName, startDate, endDate);
 
-    return evolutionPatrimoine.getFluxImpossibles();
+    return evolutionPatrimoine.getFluxJournaliers();
   }
 
   public File getGraph(String patrimoineName, LocalDate startDate, LocalDate endDate) {
